add support for account-wide heatmap display

--- a/config.conf
+++ b/config.conf
@@ -40,6 +40,9 @@ config_months_gap=0
 # Breakpoints multiplier, first two breakpoints aren't affected by the multiplier
 config_breakpoints_multiplier=1
 
+# Display heatmap for the entire account (all repositories)
+config_account_wide=true
+
 #####################################################################
 # TEXT
 #####################################################################
